fixed up the footer and moved the header into its own file.  Also added the Squash Auckland logo.

--- a/players/static/players/main.css
+++ b/players/static/players/main.css
@@ -13,6 +13,7 @@
     --color-primary-2: #E38648;
     --color-primary-3: #A64B0E;
     --color-primary-4: #7E3300;
+    --color-gray-background: #F2F2F2;
     --rgba-primary-0: rgba(205, 102, 32, 1);
     --rgba-primary-1: rgba(255, 174, 120, 1);
     --rgba-primary-2: rgba(226, 134, 72, 1);
@@ -74,6 +75,7 @@
     background-color: #ffffff;
     border-radius: 25px;
     padding-top: 10px;
+    padding-bottom: 10px;
 
 }
 
@@ -96,14 +98,18 @@ form input {
 }
 
 header {
+    display: flex;
+    justify-content: space-between;
     margin-top: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 10px;
     background-color: #EFEFEF;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
 
+header img {
+    border-radius: 5px;
+}
 #navigation-section {
     margin-top: 10px;
     background-color: var(--color-primary-0);
@@ -113,9 +119,11 @@ header {
 
 /* Set black background color, white text and some padding */
 footer {
-    background-color: #F2F2F2;
-    color: white;
+    border-radius: 10px;
+    margin-bottom: 10px;
     padding: 15px;
+    background-color: var(--color-gray-background);
+    color: var(--color-primary-0);
 }
 
 .nav-link {
@@ -566,4 +574,9 @@ footer {
 
 .player-import {
     padding-left: 30px;
+}
+
+.built-by {
+    text-align: right;
+    font-size: small;
 }
